# customer-support-assistant

./: .gitignore  README.md  app.py  linkedin_post.md  pyproject.toml  requirements-app.txt  requirements.txt
data/: instruction_dataset.jsonl  non_instruction_data.csv  preference_dataset.jsonl
models/dpo_adapter/: README.md  adapter_config.json  tokenizer_config.json
notebooks/: dpo_alignment.ipynb  instruction_finetuning.ipynb  non_instruction_finetuning.ipynb  upload_to_huggingface.ipynb
reports/: base_model_evaluation.md  final_evaluation.md  sft_model_comparison.md
src/: build_instruction_dataset.py  build_preference_dataset.py  colab_inference.py  config.py  inference.py  prepare_non_instruction_data.py
