[project]
name = "customer-support-assistant"
version = "0.1.0"
description = "Fine-tuned TinyLlama Customer Support Assistant (non-instruction + instruction + DPO)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Data prep / evaluation (installable everywhere, incl. CPU-only machines)
    "pandas>=2.0.0",
    "numpy",
    "tqdm",
    "datasets>=2.19.0",
]

# GPU fine-tuning stack. Unsloth is CUDA/torch-version specific, so it is kept as
# an optional group. Install it on your GPU machine / Colab with the exact command
# from https://github.com/unslothai/unsloth (see README). Example:
#   uv pip install "unsloth[cu121-torch230] @ git+https://github.com/unslothai/unsloth.git"
[project.optional-dependencies]
train = [
    "unsloth",
    "trl>=0.8.6,<0.9.0",
    "peft>=0.11.0",
    "transformers>=4.41.0",
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0",
    "sentencepiece",
    "protobuf",
]

[tool.uv]
# keep the training stack out of the default lock so `uv sync` works on any OS/CPU
package = false
